components/policies/pod-security-standards/baseline/restrict-selinux-types/test/job-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob01
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob02
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob03
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_init_t
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob04
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_kvm_t
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob05
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_t
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob06
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_init_t
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob07
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_kvm_t
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob08
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
        - name: container02
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_kvm_t
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob09
spec:
  template:
    spec:
      restartPolicy: OnFailure
      containers:
        - name: container01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_t
        - name: container02
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_kvm_t
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob10
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_t
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob11
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_init_t
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob12
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_kvm_t
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob13
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_t
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob14
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_init_t
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_t
      containers:
        - name: container01
          image: dummyimagename
---
apiVersion: batch/v1
kind: Job
metadata:
  name: goodjob15
spec:
  template:
    spec:
      restartPolicy: OnFailure
      initContainers:
        - name: initcontainer01
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_engine_t
        - name: initcontainer02
          image: dummyimagename
          securityContext:
            seLinuxOptions:
              type: container_t
      containers:
        - name: container01
          image: dummyimagename
---
