components/policies/pod-security-standards/baseline/restrict-selinux-types/test/pod-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    seLinuxOptions:
      type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_kvm_t
    - name: container02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: spc_t
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod05
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: spc_t
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod06
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: spc_t
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod07
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_kvm_t
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: spc_t
  containers:
    - name: container01
      image: dummyimagename
---
