components/policies/pod-security-standards/baseline/restrict-selinux-types/test/pod-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    seLinuxOptions:
      type: container_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    seLinuxOptions:
      type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
    - name: container01
      image: dummyimagename
  securityContext:
    seLinuxOptions:
      type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_init_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  containers:
    - name: container01
      image: dummyimagename
    - name: container02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod09
spec:
  containers:
    - name: container01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
    - name: container02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_kvm_t
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod10
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod11
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_init_t
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod12
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_kvm_t
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod13
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod14
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_init_t
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
  containers:
    - name: container01
      image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod15
spec:
  initContainers:
    - name: initcontainer01
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_engine_t
    - name: initcontainer02
      image: dummyimagename
      securityContext:
        seLinuxOptions:
          type: container_t
  containers:
    - name: container01
      image: dummyimagename
---
